Bug fixes to inspect_apsimx and improvements to the vignette

--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -102,4 +102,7 @@ sim <- apsimx("Wheat.apsimx", src.dir = ex.dir, value = "report", cleanup = 1)
 summary(sim)
 ## Plot data
 ggplot(data = sim, aes(x = Date, y = Yield)) + geom_point()
+## Inspect the Wheat .apsimx file
+inspect_apsimx("Wheat", src.dir = ex.dir, node = "Crop")
+inspect_apsimx("Wheat", src.dir = ex.dir, node = "Manager")
 ```
