Initial modifications to provide multi-platform support

--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -31,6 +31,14 @@ This package only works on MacOS at the moment and it assumes that you have succ
 
 Other useful R packages are 'APSIM' and 'apsimr'. The main difference is that these were written to work with the previous generation of APSIM (7.x). This package is thus an update for the new APSIM-X software.
 
+## Installing APSIM-X
+
+For most functions in this pacakge you need to have a version of APSIM-X installed. For this you might first need to install mono (https://www.mono-project.com/download/stable/) and then download and install APSIM-X (https://www.apsim.info/Products/Downloads.aspx). The \code{apsimx} package will try to detect the install of both mono and APSIM-X. 
+
+### Mac
+
+For Mac it is also assumed that APSIM-X had been moved to the '/Applications/' directory.
+
 ## R functions for APSIM-X
 
 The main functions in the package are (for now):
@@ -109,11 +117,20 @@ inspect_apsimx("Wheat", src.dir = ex.dir, node = "Crop")
 inspect_apsimx("Wheat", src.dir = ex.dir, node = "Manager")
 ```
 
+# File Type (or File Format) Details
+
+APSIM has traditionally generated files that produce simulations using an XML schema. This has been used with APSIM versions of 7.x. With APSIM-X a new format based on JSON files has been implemented and apparently both formats will be supported for the forseeable future.JSON files is less verbose and it is associated with better performance.
+
+The \code{apsimx} package supports inspection and editing of both file types for most components except for the 'Manager'; for which there is partial support. In most instances the parameters that are likely to need inspection and editing are supported but more features will be added in the future as needed. It is possible to test whether a file is XML or JSON
+
+```{r filetypes}
+ex.dir <- auto_detect_apsimx_examples()
+apsimx_filetype("Barley", src.dir = ex.dir)
+apsimx_filetype("Maize", src.dir = ex.dir)
+```
+
 # Future features
 
 * Provide support for Windows and Linux (highest priority)
-* Provide support for JSON files (high priority)
-* Provide support for editing 'Manager' (medium priority)
+* Provide additional support for editing 'Manager' (medium priority)
 * Improve implementation of read_apsimx_all (low priority)
-
-
