--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -94,7 +94,7 @@ system("rm ./Maize-edited.apsimx")
 The proposed workflow is to start by creating an .apsimx file using the GUI. In following steps the goal could be, for example, to either perform sensitivity or uncertainty analysis using R. The funcitons included in this package are aimed at simplifying the process of running a simulation, changing the value of a variable/parameter and running the model again iteratively. Writing complex scripts requires a high level knowledge of both APSIM-X and R, but it is made possible with these tools. This is the proposed workflow:
 
 1. Create a simualtion using the APSIM GUI
-2. Identify variables/parameters that you want to modify (they need to be exposed in the .apsimx XML file)
+2. Identify variables/parameters that you want to modify (they need to be exposed in the .apsimx XML o JSON file)
 3. Edit the file using 'edit_apsimx'
 4. Run the simulation using 'apsimx'
 5. Repeat steps 3 and 4 as needed
@@ -119,7 +119,7 @@ inspect_apsimx("Wheat", src.dir = ex.dir, node = "Manager")
 
 # File Type (or File Format) Details
 
-APSIM has traditionally generated files that produce simulations using an XML schema. This has been used with APSIM versions of 7.x. With APSIM-X a new format based on JSON files has been implemented and apparently both formats will be supported for the forseeable future.JSON files is less verbose and it is associated with better performance.
+APSIM has traditionally generated files that produce simulations using an XML schema. This has been used with APSIM versions of 7.x. With APSIM-X a new format based on JSON files has been implemented and apparently both formats will be supported for the forseeable future. JSON files is less verbose and it is associated with better performance.
 
 The \code{apsimx} package supports inspection and editing of both file types for most components except for the 'Manager'; for which there is partial support. In most instances the parameters that are likely to need inspection and editing are supported but more features will be added in the future as needed. It is possible to test whether a file is XML or JSON
 
