--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -104,10 +104,9 @@ The proposed workflow is to start by creating an .apsimx file using the GUI. In 
 Another proposed more advanced workflow would involve calibrating or optimizing variables given observed data. Additional tools for implementing this type of work will be added in future development.
 
 ```{r apsimx}
-## Detect 'Examples' directory
-ex.dir <- auto_detect_apsimx_examples()
-## Run simulation, this will take a while
-sim <- apsimx("Wheat.apsimx", src.dir = ex.dir, value = "report", cleanup = 1)
+## I included one example with the package for the vignette
+ex.dir <- system.file("extdata", package = "apsimx")
+sim <- apsimx("Wheat.apsimx", src.dir = ex.dir, value = "report", cleanup = TRUE)
 ## Calcualte summary statistics on all variables
 summary(sim)
 ## Plot data
