--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -124,7 +124,7 @@ Another proposed more advanced workflow would involve calibrating or optimizing 
 ```{r apsimx}
 ## I included one example with the package for the vignette
 ex.dir <- system.file("extdata", package = "apsimx")
-sim <- apsimx("Wheat.apsimx", src.dir = ex.dir, value = "report", cleanup = TRUE)
+sim <- apsimx("Wheat.apsimx", src.dir = ex.dir, value = "report")
 ## Calcualte summary statistics on all variables
 summary(sim)
 ## Plot data
