--- a/doc/apsimx-scripts.Rmd
+++ b/doc/apsimx-scripts.Rmd
@@ -40,13 +40,13 @@ When trying to invoke that line at the command line, the space after 'Program' i
 
 **C:\\\\PROGRA~1\\\\APSIM2019.07.19.4025\\\\Bin\\\\Models.exe**
 
-The backslash ("\") is an escape character in R, so you can't use it within strings.
+The backslash ("\\") is an escape character in R, so you can't use it within strings.
 
 After this, the name of the file that you want to run needs to be included. For example,
 
 **C:/PROGRA~1/APSIM2019.07.19.4025/Bin/Models.exe ./Wheat.apsimx**.
 
-However, the previous string cannot be passed directly to a Windows shell. It needs to be translated, because the 'PROGRA~1' needs to be expanded and the forward slashes ("/") need to be converted to backslashes ("\").
+However, the previous string cannot be passed directly to a Windows shell. It needs to be translated, because the 'PROGRA~1' needs to be expanded and the forward slashes ("/") need to be converted to backslashes ("\\").
 
 So to run the previous command in Windows from within R this is one way:
 
