Added manager inspection for JSON

--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -149,7 +149,9 @@ The \code{apsimx} package supports inspection and editing of both file types for
 ```{r filetypes}
 ex.dir <- auto_detect_apsimx_examples()
 apsimx_filetype("Barley", src.dir = ex.dir)
-apsimx_filetype("Maize", src.dir = ex.dir)
+extd.dir <- system.file("extdata", package = "apsimx")
+## This is an older XML 'Maize' file which is no longer distributed
+apsimx_filetype("Maize", src.dir = extd.dir)
 ```
 
 # Future features
