--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -145,8 +145,26 @@ inspect_apsimx("Wheat", src.dir = ex.dir, node = "Manager")
 
 Many additional options in an APSIM-X simulation can be realized through the use of 'Replacements'. For this, there is a function that allows inspection. For this, it is important to know the structure of the 'replacement' but if exploring them, the available components will be displayed. For example, if we want to display the xy pair for the thermal time in the phenology component of the 'Maize' replacement:
 
-```{r inspect-replacement}
+```{r inspect-replacement-node}
 extd.dir <- system.file("extdata", package = "apsimx")
+inspect_apsimx_replacement("MaizeSoybean.apsimx", src.dir = extd.dir,
+                            node = "Maize", display.available = TRUE)
+```
+
+```{r inspect-replacement-node-child}
+inspect_apsimx_replacement("MaizeSoybean.apsimx", src.dir = extd.dir,
+                            node = "Maize", node.child = "Phenology",
+                           display.available = TRUE)
+```
+
+```{r inspect-replacement-node-subchild}
+inspect_apsimx_replacement("MaizeSoybean.apsimx", src.dir = extd.dir,
+                            node = "Maize", node.child = "Phenology",
+                           node.subchild = "ThermalTime",
+                           display.available = TRUE)
+```
+
+```{r inspect-replacement-node-subchild-parm}
 inspect_apsimx_replacement("MaizeSoybean.apsimx", src.dir = extd.dir,
                             node = "Maize", node.child = "Phenology",
                             node.subchild = "ThermalTime", parm = c("X","Y")) 
@@ -154,11 +172,22 @@ inspect_apsimx_replacement("MaizeSoybean.apsimx", src.dir = extd.dir,
 
 The function shows the available replacements ("Maize" and "Soybean"), the 'CropType' if available, the subchild name and the xy pair in this example. If parm is not specified all elements will be displayed.
 
-```{r inspect-replacement-all}
+Let's say we want to inspect details of soybean cultivars
+
+```{r inspect-replacement-soybean-cultivar-node}
 inspect_apsimx_replacement("MaizeSoybean.apsimx", src.dir = extd.dir,
-                            node = "Maize", node.child = "Phenology",
-                            node.subchild = "ThermalTime") 
+                            node = "Soybean", display.available = TRUE) 
 ```
+
+In this case the cultivars are at the sub-node level.
+
+```{r inspect-replacement-soybean-cultivar-node-child}
+inspect_apsimx_replacement("MaizeSoybean.apsimx", src.dir = extd.dir,
+                           node = "Soybean", 
+                           node.child = "PioneerP22T61_MG22",
+                           display.available = FALSE) 
+```
+
 
 ### File Type (or File Format) Details
 
